--- a/api/package.json
+++ b/api/package.json
@@ -25,5 +25,9 @@
     "express": "^4.13.3",
     "mysql": "^2.9.0",
     "sequelize": "^3.12.0"
+  },
+  "devDependencies": {
+    "async": "^1.4.2",
+    "lodash": "^3.10.1"
   }
 }
